k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: energypredict-api
spec:
  type: ClusterIP
  selector:
    app: energypredict-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
